# quicktail

./: README.md  module.py  pyproject.toml  setup.py
src/quicktail/: __init__.py  main.py  module.py
