[project]
name = "quicktail"
version = "0.2.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "anibal", email = "anibal.fermandois@uc.cl" }
]
requires-python = ">=3.9"
dependencies = []

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
